email address.


2007-Oct-3 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    made BOARD_ITEM::UnLink() virtual
    added BOARD_ITEM::DeleteStructure().
    added EDA_BaseStruct::DeleteStructList()
    deleted gerbview/struct.cpp, pcbnew/struct.cpp, 
    BOARD::~BOARD() now deletes objects that it owns.
    

2007-Oct-2 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ all
    The lack of border resizing in dialogs has been a problem.  In my world, 
    dialog boxes are resizable.  I use large fonts, I like to see stuff.
    So now for __UNIX__ they are resizeable, for windows not.
    See fctsys.h and the #define for MAYBE_RESIZE_BORDER.  For windows it defaults
    to zero which means resizeable is not featured.  A compiler command line
    option of "USE_RESIZE_BORDER" can override this windows default.
    

2007-Oct-01 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew/eeschema
	Cross-probing pcbnew to eeschema:
		A left click on a pad in pcbnew moves the eeschema cursor on the corresponding component pin
		A left click on a footprint ref or value in pcbnew moves the eeschema cursor on the corresponding component ref or value
		A left ckick on a footprint moves the eeschema cursor on the corresponding component anchor
+ pcbnew
	removed drc.cpp change line 584, and translate comments in english.
	nothing broken:
		-> a pad with its netcode = 0 means the pad ** must be left unconnected ** (not attached to *  a net).
		-> a track with its netcode = 0 means the track is not attached to a net (cannot be connected to any pad).


2007-Sep-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew